--- a/.gitignore
+++ b/.gitignore
@@ -3,24 +3,20 @@ coverage
 
 # rdoc generated
 rdoc
-
 # yard generated
 doc
 .yardoc
-
 # bundler
 .bundle
-
 # jeweler generated
 pkg
-
-
 *.DS_Store
-
 # For TextMate
 *.tmproj
 tmtags
-
 #api key info
 keys.txt
 spec/config.yml
+# For RubyMine
+/.idea/
+/.rvmrc
